main-video add responsive and js behavior desire so cute

--- a/blog.html
+++ b/blog.html
@@ -31,8 +31,8 @@
             <li data-menuanchor="videos"><a class="close" href="#videos">Videos <i class="icon-play"></i></a></li>
             <li><a href="#.">Plus Ultra <img src="assets/images/plus.png" alt="blog plus ultra"></a></li>
             <li class="c-menu-social">
-              <label for="pop">Síguenos</label>
-              <input type="checkbox" id="pop">
+              <label for="menu-social">Síguenos</label>
+              <input id="menu-social" type="checkbox">
               <ul>
                 <li><a href="https://www.facebook.com/BeMyTotem/" target="_blank"> <span>Facebook</span><i class="icon-facebook2"> </i></a></li>
                 <li><a href="https://www.instagram.com/bmt_brotherhood" target="_blank"> <span>Instagram</span><i class="icon-instagram"> </i></a></li>
@@ -51,8 +51,8 @@
                 <li data-menuanchor="videos"><a class="close" href="#videos">Videos <i class="icon-play"></i></a></li>
                 <li><a href="#.">Plus Ultra <img src="assets/images/plus.png" alt="blog plus ultra"></a></li>
                 <li class="c-menu-social">
-                  <label for="pop">Síguenos</label>
-                  <input type="checkbox" id="pop">
+                  <label for="menu-social">Síguenos</label>
+                  <input id="menu-social" type="checkbox">
                   <ul>
                     <li><a href="https://www.facebook.com/BeMyTotem/" target="_blank"> <span>Facebook</span><i class="icon-facebook2"> </i></a></li>
                     <li><a href="https://www.instagram.com/bmt_brotherhood" target="_blank"> <span>Instagram</span><i class="icon-instagram"> </i></a></li>
