refactorizamos js/vendors y los establecemos de forma local jquery magnificpopup etc..

--- a/blog.html
+++ b/blog.html
@@ -7,15 +7,18 @@
     <link rel="icon" href="./assets/images/favicon.ico" type="image/ico">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <!-- Icomoon-->
-    <link rel="stylesheet" href="assets/css/icomoon.css">
-    <!-- Estilos globales-->
+    <link rel="stylesheet" href="assets/css/vendors/icomoon.css">
+    <!-- PopUp - Magnific-->
+    <link rel="stylesheet" href="assets/css/vendors/magnific.css">
+    <title>BTM | Blog</title>
+    <!-- Scripts Vendors Globales-->
+    <script src="./assets/js/vendors/jquery-1.9.1.min.js" defer></script>
+    <script src="./assets/js/vendors/jquery-migrate-1.2.1.min.js" defer></script>
+    <script src="assets/js/vendors/magnific.js" defer></script>
+    <!-- Estilos globales------>
     <link rel="stylesheet" href="assets/css/global-2.css">
     <link rel="stylesheet" href="assets/css/global.css">
-    <!-- Pup up - Magnific-->
-    <link rel="stylesheet" href="assets/css/magnific.css">
-    <title>BTM | Blog</title>
-    <!-- Scripts globales-->
-    <script src="assets/js/magnific.js" defer></script>
+    <!-- Script GLOBAL-------->
     <script src="./assets/js/global.js" defer></script>
   </head>
   <body class="c-block-body">
