--- a/index.html
+++ b/index.html
@@ -7,25 +7,26 @@
     <link rel="icon" href="./assets/images/favicon.ico" type="image/ico">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <!-- Icomoon-->
-    <link rel="stylesheet" href="assets/css/icomoon.css">
-    <!-- Estilos globales-->
-    <link rel="stylesheet" href="assets/css/global-2.css">
-    <link rel="stylesheet" href="assets/css/global.css">
-    <!-- Pup up - Magnific-->
-    <link rel="stylesheet" href="assets/css/magnific.css">
+    <link rel="stylesheet" href="assets/css/vendors/icomoon.css">
+    <!-- PopUp - Magnific-->
+    <link rel="stylesheet" href="assets/css/vendors/magnific.css">
     <title>BMT</title>
+    <!-- Scripts Vendors Globales-->
+    <script src="./assets/js/vendors/jquery-1.9.1.min.js" defer></script>
+    <script src="./assets/js/vendors/jquery-migrate-1.2.1.min.js" defer></script>
+    <script src="assets/js/vendors/magnific.js" defer></script>
     <!-- Vendors Javascript-->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.0.8/fullpage.min.js" defer></script>
-    <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js" defer></script>
-    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js" defer></script>
-    <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js" defer></script>
+    <script type="text/javascript" src="./assets/js/vendors/fullpage.js" defer></script>
+    <script type="text/javascript" src="./assets/js/vendors/slick.js" defer></script>
     <!-- Fin Vendors Javascript-->
     <!-- Vendors CSS-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.0.8/fullpage.min.css">
-    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css">
+    <link rel="stylesheet" href="./assets/css/vendors/fullpage.css">
+    <link rel="stylesheet" href="./assets/css/vendors/slick.css">
     <!-- Fin Vendors CSS-->
-    <!-- Scripts globales-->
-    <script src="assets/js/magnific.js" defer></script>
+    <!-- Estilos globales------>
+    <link rel="stylesheet" href="assets/css/global-2.css">
+    <link rel="stylesheet" href="assets/css/global.css">
+    <!-- Script GLOBAL-------->
     <script src="./assets/js/global.js" defer></script>
   </head>
   <body class="c-block-body">
