Añadimos loop al video

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="assets/css/vendors/icomoon.css">
     <!-- PopUp - Magnific-->
     <link rel="stylesheet" href="assets/css/vendors/magnific.css">
-    <title>BMT</title>
+    <title>BMT #JoinTheRitual</title>
     <!-- Scripts Vendors Globales-->
     <script src="./assets/js/vendors/jquery-1.9.1.min.js" defer></script>
     <script src="./assets/js/vendors/jquery-migrate-1.2.1.min.js" defer></script>
@@ -91,7 +91,7 @@
             <div class="film">Watch the film</div> <i class="icon-play3 play-icon"></i></a>
           <div class="c-home__buttons gallery-item"><a class="play c-home__button" href="#video-mensual" data-effect="mfp-zoom-in">Video Mensual<i class="icon-play3"></i></a><a class="c-home__button-2" href="#events">Eventos<i class="icon-calendar2"></i></a></div>
           <div class="mfp-with-anim mfp-hide c-home__video" id="video-mensual">
-            <video class="main-video" controls>
+            <video class="main-video" controls loop>
               <source src="assets/images/home.mp4" type="video/mp4">
             </video>
           </div>
